--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1687384989791">
+		<link rel="stylesheet" href="./css/main.css?v=1687476040536">
 	</head>
 	<body>
 		<!-- Header-->
@@ -124,66 +124,26 @@
 			</div>
 			<div class="header__mobile-menu">
 				<div class="container header__mobile-menu-container">
-					<ul class="header__mobile-menu-list">
-						<li class="header__mobile-menu-elem">
-							<div class="header__mobile-menu-link-box"><a class="header__mobile-menu-link" href="#">Индустрии</a>
-								<svg class="header__mobile-menu-dropdown">
+					<div class="mobile-nav">
+						<div class="mobile-nav__block"><a class="mobile-nav__nav-title" href="#">Индустрии</a></div>
+						<div class="mobile-nav__block"><a class="mobile-nav__nav-title" href="#">Услуги</a></div>
+						<div class="mobile-nav__block"><a class="mobile-nav__nav-title" href="#">Кейсы</a></div>
+						<div class="mobile-nav__block"><a class="mobile-nav__nav-title" href="#">Терминалы</a></div>
+						<div class="mobile-nav__block"><a class="mobile-nav__nav-title" href="#">Карьера</a></div>
+						<div class="mobile-nav__block"><a class="mobile-nav__nav-title" href="#">Вебинары</a></div>
+						<div class="mobile-nav__block"><a class="mobile-nav__nav-title" href="#">Новости</a></div>
+						<div class="mobile-nav__block"><span class="mobile-nav__nav-title">Устойчивое развитие
+								<svg class="mobile-nav__mobile-menu-dropdown">
 									<use xlink:href="images/svg-sprite/svg-sprite-static.svg#menu-dropdown"></use>
-								</svg>
-							</div>
-							<ul class="header__mobile-menu-child-list">
-								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Fashion</a></li>
-								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Telecom</a></li>
-								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Helthcare</a></li>
-								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Автомотив</a></li>
-								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">POSM маркетинг</a></li>
-								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">FMCG</a></li>
+								</svg></span>
+							<ul class="mobile-nav__nav-list">
+								<li class="mobile-nav__nav-elem"><a class="mobile-nav__nav-link" href="#">Охрана труда</a></li>
+								<li class="mobile-nav__nav-elem"><a class="mobile-nav__nav-link" href="#">Служба качества</a></li>
 							</ul>
-						</li>
-						<li class="header__mobile-menu-elem">
-							<div class="header__mobile-menu-link-box"><a class="header__mobile-menu-link" href="#">Услуги</a>
-								<svg class="header__mobile-menu-dropdown">
-									<use xlink:href="images/svg-sprite/svg-sprite-static.svg#menu-dropdown"></use>
-								</svg>
-							</div>
-							<ul class="header__mobile-menu-child-list">
-								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Ответственное хранение</a></li>
-								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Фулфилмент</a></li>
-								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Кросс-докинг</a></li>
-								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Таможенный склад</a></li>
-								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Упаковка</a></li>
-								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Копакинг</a></li>
-								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Еще услуга</a></li>
-							</ul>
-						</li>
-						<li class="header__mobile-menu-elem">
-							<div class="header__mobile-menu-link-box"><a class="header__mobile-menu-link" href="#">Major Terminal</a>
-								<svg class="header__mobile-menu-dropdown">
-									<use xlink:href="images/svg-sprite/svg-sprite-static.svg#menu-dropdown"></use>
-								</svg>
-							</div>
-							<ul class="header__mobile-menu-child-list">
-								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">О нас</a></li>
-								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Кейсы</a></li>
-								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Пресс-релизы</a></li>
-								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Наши склады</a></li>
-								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Контакты</a></li>
-								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Преимущества</a></li>
-								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Наши вакансии</a></li>
-							</ul>
-						</li>
-						<li class="header__mobile-menu-elem">
-							<div class="header__mobile-menu-link-box"><a class="header__mobile-menu-link" href="#">Язык</a>
-								<svg class="header__mobile-menu-dropdown">
-									<use xlink:href="images/svg-sprite/svg-sprite-static.svg#menu-dropdown"></use>
-								</svg>
-							</div>
-							<ul class="header__mobile-menu-child-list">
-								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Русский</a></li>
-								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Английский</a></li>
-							</ul>
-						</li>
-					</ul>
+						</div>
+						<div class="mobile-nav__block"><a class="mobile-nav__nav-title" href="#">О нас</a></div>
+						<div class="mobile-nav__block"><a class="mobile-nav__nav-title" href="#">Контакты</a></div>
+					</div>
 				</div>
 			</div>
 		</header>
@@ -500,25 +460,25 @@
 		<footer class="footer">
 			<div class="container">
 				<div class="footer__row">
-					<div class="footer__mobile-nav hide-laptop">
-						<div class="footer__mobile-nav-block"><a class="footer__nav-title" href="#">Индустрии</a></div>
-						<div class="footer__mobile-nav-block"><a class="footer__nav-title" href="#">Услуги</a></div>
-						<div class="footer__mobile-nav-block"><a class="footer__nav-title" href="#">Кейсы</a></div>
-						<div class="footer__mobile-nav-block"><a class="footer__nav-title" href="#">Терминалы</a></div>
-						<div class="footer__mobile-nav-block"><a class="footer__nav-title" href="#">Карьера</a></div>
-						<div class="footer__mobile-nav-block"><a class="footer__nav-title" href="#">Вебинары</a></div>
-						<div class="footer__mobile-nav-block"><a class="footer__nav-title" href="#">Новости</a></div>
-						<div class="footer__mobile-nav-block"><span class="footer__nav-title">Устойчивое развитие
-								<svg class="footer__mobile-menu-dropdown">
+					<div class="footer__mobile-nav mobile-nav hide-laptop">
+						<div class="mobile-nav__block"><a class="mobile-nav__nav-title" href="#">Индустрии</a></div>
+						<div class="mobile-nav__block"><a class="mobile-nav__nav-title" href="#">Услуги</a></div>
+						<div class="mobile-nav__block"><a class="mobile-nav__nav-title" href="#">Кейсы</a></div>
+						<div class="mobile-nav__block"><a class="mobile-nav__nav-title" href="#">Терминалы</a></div>
+						<div class="mobile-nav__block"><a class="mobile-nav__nav-title" href="#">Карьера</a></div>
+						<div class="mobile-nav__block"><a class="mobile-nav__nav-title" href="#">Вебинары</a></div>
+						<div class="mobile-nav__block"><a class="mobile-nav__nav-title" href="#">Новости</a></div>
+						<div class="mobile-nav__block"><span class="mobile-nav__nav-title">Устойчивое развитие
+								<svg class="mobile-nav__mobile-menu-dropdown">
 									<use xlink:href="images/svg-sprite/svg-sprite-static.svg#menu-dropdown"></use>
 								</svg></span>
-							<ul class="footer__nav-list">
-								<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Охрана труда</a></li>
-								<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Служба качества</a></li>
+							<ul class="mobile-nav__nav-list">
+								<li class="mobile-nav__nav-elem"><a class="mobile-nav__nav-link" href="#">Охрана труда</a></li>
+								<li class="mobile-nav__nav-elem"><a class="mobile-nav__nav-link" href="#">Служба качества</a></li>
 							</ul>
 						</div>
-						<div class="footer__mobile-nav-block"><a class="footer__nav-title" href="#">О нас</a></div>
-						<div class="footer__mobile-nav-block"><a class="footer__nav-title" href="#">Контакты</a></div>
+						<div class="mobile-nav__block"><a class="mobile-nav__nav-title" href="#">О нас</a></div>
+						<div class="mobile-nav__block"><a class="mobile-nav__nav-title" href="#">Контакты</a></div>
 					</div>
 					<!-- Nav col-->
 					<div class="footer__col show-laptop"><a class="footer__nav-title" href="#">Индустрии</a>
@@ -580,8 +540,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1687384989792"></script>
-		<script src="./js/main.js?v=1687384989792"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1687476040537"></script>
+		<script src="./js/main.js?v=1687476040537"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 8" id="chevron-dropdown">
 		<path d="M1 1.28394L6 5.96615L11 1.28394" stroke="#00162F" stroke-width="2" stroke-linecap="round"></path>
 	</symbol>
