--- a/terminals.html
+++ b/terminals.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1687476043115">
+		<link rel="stylesheet" href="./css/main.css?v=1687477164025">
 	</head>
 	<body>
 		<!-- Header-->
@@ -164,6 +164,19 @@
 			<section class="section-terminals container">
 				<div class="section-terminals__title-box">
 					<h2 class="h2 text-blue section-terminals__title">Наши терминалы</h2>
+					<div class="dropdown dropdown--light-blue-border section-terminals__mobile-filter hide-desktop">
+						<div class="dropdown__value-box">
+							<input class="dropdown__value" type="text" value="Кулон-Истра" disabled>
+							<svg class="dropdown__arrow">
+								<use xlink:href="#chevron-dropdown"></use>
+							</svg>
+						</div>
+						<ul class="dropdown__options-list">
+							<li class="dropdown__option dropdown__option--selected" data-value="Кулон-Истра">Кулон-Истра</li>
+							<li class="dropdown__option" data-value="Логопарк">Логопарк</li>
+							<li class="dropdown__option" data-value="М9">М9</li>
+						</ul>
+					</div>
 					<div class="section-terminals__dropdown-row">
 						<div class="dropdown dropdown--gray-border section-terminals__dropdown">
 							<div class="dropdown__value-box">
@@ -401,8 +414,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1687476043116"></script>
-		<script src="./js/main.js?v=1687476043116"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1687477164026"></script>
+		<script src="./js/main.js?v=1687477164026"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 8" id="chevron-dropdown">
 		<path d="M1 1.28394L6 5.96615L11 1.28394" stroke="#00162F" stroke-width="2" stroke-linecap="round"></path>
 	</symbol>
