--- a/case-list.html
+++ b/case-list.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1689156763469">
+		<link rel="stylesheet" href="./css/main.css?v=1689348847150">
 	</head>
 	<body>
 		<!-- Header-->
@@ -215,7 +215,13 @@
 							<li class="card__tag">Fashion</li>
 							<li class="card__tag">Складское хранение</li>
 							<li class="card__tag">Вешальное хранение</li>
-							<li class="card__tag">Еще (7)</li>
+							<li class="card__tag card__tag--more">Еще (7)</li>
+							<li class="card__tag card__tag--hidden">Fashion 2</li>
+							<li class="card__tag card__tag--hidden">Складское хранение 2</li>
+							<li class="card__tag card__tag--hidden">Вешальное хранение 2</li>
+							<li class="card__tag card__tag--hidden">Fashion 3</li>
+							<li class="card__tag card__tag--hidden">Складское хранение 3</li>
+							<li class="card__tag card__tag--hidden">Вешальное хранение 3</li>
 						</ul>
 						<div class="card__text-box">
 							<p class="card__text">Здесь будет чуть больше информации по описанию для данного кейса</p>
@@ -437,8 +443,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1689156763470"></script>
-		<script src="./js/main.js?v=1689156763470"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1689348847151"></script>
+		<script src="./js/main.js?v=1689348847151"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 8" id="chevron-dropdown">
 		<path d="M1 1.28394L6 5.96615L11 1.28394" stroke="#00162F" stroke-width="2" stroke-linecap="round"></path>
 	</symbol>
